Issue #7414: Add missing 'case 'C'' to skipitem() in getargs.c.  This was causing PyArg_ParseTupleAndKeywords(args, kwargs, "|CC", ...) to fail with a RuntimeError.  Thanks Case Van Horsen for tracking down the source of this error.